# forgepad

./: CLAUDE.md  README.md  pyproject.toml
src/forgepad/: __init__.py  executor.py  parser.py  registry.py  session.py
src/forgepad/charts/: __init__.py  mapping.py
src/forgepad/commands/: __init__.py  advanced.py  data.py  domain.py  quality.py  regression.py  stats.py  visualization.py
tests/: test_expanded.py  test_forgepad.py
